--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
+    "bootstrap": "^5.3.3",
     "firebase": "^10.12.5",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-bootstrap": "^2.10.4",
+    "react-dom": "^18",
+    "react-google-button": "^0.8.0"
   },
   "devDependencies": {
     "eslint": "^8",
