--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
+    "@vercel/speed-insights": "^1.0.12",
     "bootstrap": "^5.3.3",
     "firebase": "^10.12.5",
     "next": "14.2.5",
