--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
+    "@next/third-parties": "^14.2.5",
     "@vercel/speed-insights": "^1.0.12",
     "bootstrap": "^5.3.3",
     "firebase": "^10.12.5",
-    "next": "14.2.5",
+    "next": "^14.2.5",
     "react": "^18",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18",
